Try to fix the layout bug where the page is too wide

--- a/src/_scss/base/layout.scss
+++ b/src/_scss/base/layout.scss
@@ -14,7 +14,6 @@ body {
   min-height: 100vh;
 
   main {
-    width: 100vw;
     flex: 1;
   }
 }
